--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <!--Logo codo a codo-->
-           <img src="image/logo.png" alt="Logo Codo a codo" height="50">
+           <img src="Image/logo.png" alt="Logo Codo a codo" height="50">
            Conf Bs As
           </a>
            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,7 +97,7 @@
         <div class="row justify-content-center contenedor--oradores">
           <div class="col-lg-3 col-md-5 d-flex justify-content-center">
             <div class="card h-100" style="width: 18rem">
-              <img src="image/stevejobs.jpg" class="card-img-top" alt="Steve Jobs">
+              <img src="Image/stevejobs.jpg" class="card-img-top" alt="Steve Jobs">
               <div class="card-body text-start">
                 <div class="buton-section">
                   <a href="#" class="btn btn-warning fw-bold sector ">JavaScript</a>
@@ -114,7 +114,7 @@
           <!--Speakers Bill Gates-->
           <div class="col-lg-3 col-md-5 d-flex justify-content-center">
             <div class="card h-100" style="width: 18rem">
-              <img src="image/BillGates.jpg" class="card-img-top" alt="Bill Gates">
+              <img src="Image/BillGates.jpg" class="card-img-top" alt="Bill Gates">
 
               <div class="card-body">
                 <div class="buton-section">
@@ -131,7 +131,7 @@
           <!--Speakers Ana Lovelace-->
           <div class="col-lg-3 col-md-5 d-flex justify-content-center">
             <div class="card h-100" style="width: 18rem">
-              <img src="image/AdaLovelace.jpeg" class="card-img-top" alt="Ada Lovelace">
+              <img src="Image/AdaLovelace.jpeg" class="card-img-top" alt="Ada Lovelace">
 
               <div class="card-body">
                 <div class="buton-sector">
@@ -151,7 +151,7 @@
        <!--Tercer texto-->
       <section class="container-fluid p-0 d-flex gap-1 text-white mt-4 align-items-stretch">
         <div class="col col-lg-6 col-md-12 col-sm-12">
-          <img src="image/Honolulu.jpg" class="img3" alt="Honolulu">
+          <img src="Image/Honolulu.jpg" class="img3" alt="Honolulu">
         </div>
         <div class="col col-lg-6  col-md-12 col-sm-12 bg-dark p-3">
           <h3>Bs. As. - Octubre</h3>
