--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide position-relative d-flex align-items-center justify-content-end" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item">
-            <img src="image/Image-1.jpg" class="d-block w-100 opacity" alt="Museo Bs As">
+            <img src="Image/Image-1.jpg" class="d-block w-100 opacity" alt="Museo Bs As">
           </div>
           <div class="carousel-item">
-            <img src="image/Image-2.jpg" class="d-block w-100 opacity" alt="Plaza">
+            <img src="Image/Image-2.jpg" class="d-block w-100 opacity" alt="Plaza">
           </div>
           <div class="carousel-item active">
-            <img src="image/Image-3.jpg" class="d-block w-100 opacity" alt="Obelisco">
+            <img src="Image/Image-3.jpg" class="d-block w-100 opacity" alt="Obelisco">
           </div>
         </div>
         <!--Text Carrousel-->
